MComix 0.90.4

    - Fixed excessive memory consumption due to cached pixmaps not being
      properly evicted.

    - Fixed certain wait conditions that prevented MComix from exiting
      on Win32.

    - The "Go to page" dialog now shows thumbnails when they are available, 
      not only after all thumbnails have been loaded.

    - Fix "Automatically open next archive" with empty archives.

    - Speed up thumbnail generation by parallelizing load tasks.
      (inspired by David Zaragoza, who originally suggested to use
      processes instead of threads)

    - New option to delay loading of thumbnails. This way, thumbnails will
      only be generated when they are actually needed, i.e. the thumbnail
      sidebar is open or "Go to page" is used.

    - Library cover generation is now parallelized as well.

    - MComix' configuration files are now stored in ~/.config/mcomix instead
      of in ~/.local/share/mcomix, as originally intended.

    - Added the toolbar show/hide menu to the right-click popup. Previously,
      if the menu bar had been disabled using the normal menu, there was no
      way to get it back.

    - MComix could not switch back to windowed mode when started in fullscreen
      mode on Win32.

    - Required Python version is now 2.5 or newer.

MComix 0.90.3

    - MComix now uses a slightly different directory structure than before. 
      The 'src' folder is now 'mcomix' to provide a correct package name.
      'mcomix.py' is now 'mcomixstarter.py' to avoid confusing Python by
      having a module with the same name as the package around.
      Translations and images required by the GUI are now sub-packages of
      'mcomix'. 

      A setuptools-based setup.py replaces install.py. This should help for
      uniform installs across different operating systems.

    - Several strings have been reworked to ease localization.

    - Added ability to apply current changes in the edit archive window.
